# bevy_canoe_ui

./: Cargo.toml
crates/canoe_core/: Cargo.toml
crates/canoe_core/src/: lib.rs  prelude.rs  render_tree.rs
crates/canoe_core/src/components/: container_component.rs  mod.rs  text_component.rs
crates/canoe_core/src/ui_primitive/: mod.rs
crates/canoe_proc/: Cargo.toml
crates/canoe_proc/src/: lib.rs
examples/: basic.rs  csx.rs  super_basic_csx.rs
src/: prelude.rs
