[package]
name = "bevy_canoe_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/*"
]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "csx"
path = "examples/csx.rs"


[[example]]
name = "super_basic_csx"
path = "examples/super_basic_csx.rs"

[dependencies]
bevy = "0.10.1"
canoe_core = { path = "crates/canoe_core"}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable full optimizations for release builds (Link-Time-Optimization)
[profile.release]
lto = "thin"