[package]
name = "canoe_proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "basic"
path = "tests/basic.rs"

[dependencies]
convert_case = "0.6.0"
syn = "2.0.17"
syn-rsx = "0.9.0"
quote = "1.0.28"
proc-macro2 = "1.0.59"